# llm

./: .gitignore  docker-compose.yml
chatbot_api/: pyproject.toml
chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py
chatbot_api/src/chatbot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo-langchain/: script.sh
demo_langchain/chroma_data/75708643-3b7c-4f63-889b-a2127ba5f776/: index_metadata.pickle
demo_langchain/langchain_intro/: chat_retriver.py  chatbot.py  create_retriver.py  langchain_model.py
hospital_neo4j_etl/: Dockerfile  pyproject.toml
hospital_neo4j_etl/src/: hospital_bulk_csv_write.py
langchain_tutorial/: pyproject.toml
langchain_tutorial/chat_bot/: chat_bot.py
langchain_tutorial/simple_app/: simple_app_server.py
