[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio",
    "fastapi",
    "langchain",
    "langchain-openai",
    "langchainhub",
    "neo4j",
    "numpy",
    "openai",
    "opentelemetry-api",
    "pydantic",
    "uvicorn",
    "transformers",
    "langchain-google-genai",
]

[project.optional-dependencies]
dev = ["black", "flake8"]